[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "fastcpf"
version = "1.0.0"
description = "Fast Component-wise Peak-Finding (CPF) clustering algorithm"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8,<3.13"
authors = [
    { name = "yuki-inaho" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["clustering", "machine-learning", "density-based", "cpf"]
dependencies = [
    "numpy>=2.0.0",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.9.0",
    "scipy>=1.14.0",
]
dev = [
    "pytest>=9.0.0",
    "scikit-learn>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/yuki-inaho/fastCPF"
Repository = "https://github.com/yuki-inaho/fastCPF"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "fastcpf._fastcpf"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
